# reflexTrainerSlave

./: .gitmodules  CMakeLists.txt  CMakePresets.json  buildAll.sh  buildReflexTrainer.sh  buildSimTests.sh  buildUnittests.sh  main.cpp  makeUT.sh
include/: avrTimerAdapterClock.h  avrTimerAdapterTimer.h  avrTimerInterface.h  necDecoder.h  print.h  timers.h
sim-tests/: CMakeLists.txt  button.cpp  button.h  simavr.cpp
sim-tests/test-programs/: CMakeLists.txt  clock_test.cpp  main.cpp  simtest.cpp
src/: avrTimerAdapterClock.cpp  avrTimerAdapterTimer.cpp  necDecoder.cpp  print.cpp  timers.cpp
src/avr-specific/: timers.cpp
unittests/: TestClock.cpp  TestTimerUtils.cpp  TestTimers.cpp
